--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
   - name: budget_app
-    databaseName: budget_app_73eg
-    user: budget_app_73eg_user
+    databaseName: budget_app_rxlk
+    user: budget_app_rxlk_user
 
 services:
   - type: web
-    name: budget_app
+    name: mobile-app-zn
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: budget_app_73eg
+          name: budget_app
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
